--- a/Source/TreasureGuide.Web/src/app.html
+++ b/Source/TreasureGuide.Web/src/app.html
@@ -49,9 +49,7 @@
                 <i class="fa fa-fw fa-github"></i>View on GitHub
             </a>
             <br />
-            Character, Stage, and Ship Data sourced from <a href="https://optc-db.github.io/" target="_blank">optc-db</a>
-            <br />
-            &copy; 2017
+            Game data sourced from <a href="https://optc-db.github.io/" target="_blank">OPTC-db</a>
         </div>
     </footer>
 </template>
