Adding profile search for teams.

--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -6,6 +6,8 @@
                 <div class="col m4">
                     <label for="termInput">Term</label>
                     <input id="termInput" type="text" value.bind="term" placeholder="My Nakama..." />
+                    <label for="userInput">User Name</label>
+                    <input id="userInput" type="text" value.bind="submittedBy" placeholder="Luffy..." />
                     <label for="stageInput">Stage</label>
                     <stage-display id="stageInput" editable="true" stage-id.bind="stageId"></stage-display>
                 </div>
