--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="row _alignCenter">
                     <div class="unit-collection">
-                        <unit-display repeat.for="unit of units" unit-id.bind="unit.id" size="medium" click.delegate="clicked(unit.id)"></unit-display>
+                        <unit-display repeat.for="unit of units" unit-id.bind="unit.id" name.bind="unit.name" size="medium" click.delegate="clicked(unit.id)" clickable="true"></unit-display>
                     </div>
                 </div>
                 <div class="row">
