Updating team displays on index.

--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -9,7 +9,7 @@
                     <label for="userInput">User Name</label>
                     <input id="userInput" type="text" value.bind="submittedBy" placeholder="Luffy..." />
                     <label for="stageInput">Stage</label>
-                    <stage-display id="stageInput" editable="true" stage-id.bind="stageId"></stage-display>
+                    <stage-display id="stageInput" editable="true" stage-id.two-way="stageId"></stage-display>
                 </div>
                 <div class="col m4">
                     <label for="unitInput">Captain</label>
