Adding timestamp parsing throughout.

--- a/Source/TreasureGuide.Web/src/custom-elements/team-box.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-box.html
@@ -11,7 +11,9 @@
             </div>
             <div class="row">
                 <user-display name.bind="team.submittedByName" unit-id.bind="team.submittedByUnitId"></user-display>
-                <span class="time">${team.editedDate}</span>
+                <span class="time">
+                    ${team.editedDate | ageFormat}
+                </span>
             </div>
         </fieldset>
     </a>
