--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
@@ -73,7 +73,7 @@
             <loading-area if.bind="loading"></loading-area>
             <div if.bind="!loading">
                 <div class="row">
-                    <search-pager search-model.bind="searchModel" result-count.bind="resultCount"></search-pager>
+                    <search-pager search-model.bind="searchModel"></search-pager>
                 </div>
                 <div class="row _alignCenter">
                     <div class="unit-collection">
@@ -81,7 +81,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <search-pager search-model.bind="searchModel" result-count.bind="resultCount" bottom="true"></search-pager>
+                    <search-pager search-model.bind="searchModel" bottom="true"></search-pager>
                 </div>
             </div>
         </ux-dialog-body>
