--- a/Source/TreasureGuide.Web/src/custom-elements/search-pager.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/search-pager.html
@@ -1,9 +1,9 @@
 <template>
     <div class="_floatLeft" show.bind="hasPages">
-        <aup-pagination current-page.bind="searchModel.page" page-size.bind="searchModel.pageSize" page-sizes.bind="pageSizes" total-items.bind="resultCount"></aup-pagination>
+        <aup-pagination current-page.bind="searchModel.page" page-size.bind="searchModel.pageSize" page-sizes.bind="pageSizes" total-items.bind="searchModel.totalResults"></aup-pagination>
     </div>
     <div class="_floatRight" show.bind="hasResults">
-        <p>${startIndex} - ${endIndex} of ${resultCount}</p>
+        <p>${startIndex} - ${endIndex} of ${searchModel.totalResults}</p>
     </div>
     <h3 class="_alignCenter" show.bind="!bottom && !hasResults">Search yielded no results!</h3>
 </template>
