Updating lots of css.

--- a/Source/TreasureGuide.Web/src/app.html
+++ b/Source/TreasureGuide.Web/src/app.html
@@ -42,7 +42,7 @@
         </div>
     </main>
     <footer>
-        <div class="jumbo _dark">
+        <div class="jumbo _dark footer">
             Developed by <a href="http://robocafaz.com" target="_blank">RoboCafaz</a>
             <br />
             <a class="button _small _info" href="https://github.com/RoboCafaz/TreasureGuide">
