--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/stage-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/stage-picker.html
@@ -15,7 +15,7 @@
 
                         <label for="checkInput">
                             <input type="checkbox" checked.two-way="global" />
-                            Global
+                            <span class="-label-body">Global</span>
                         </label>
                     </div>
                     <div class="col m4">
