--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -17,11 +17,11 @@
 
                     <label for="globalCheckbox">
                         <input id="globalCheckbox" type="checkbox" checked.bind="global" />
-                        Global
+                        <span class="-label-body"> Global</span>
                     </label>
                     <label for="f2pCheckbox">
                         <input id="f2pCheckbox" type="checkbox" checked.bind="freeToPlay" />
-                        Free to Play
+                        <span class="-label-body">Free to Play</span>
                     </label>
                 </div>
             </div>
