Adding delete/report display for index.

--- a/Source/TreasureGuide.Web/src/custom-elements/team-box.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-box.html
@@ -1,6 +1,6 @@
 <template>
     <a route-href="route: teamDetails; params.bind: {id: team.id}">
-        <fieldset>
+        <fieldset class.bind="teamClass">
             <legend>
                 ${team.name}
             </legend>
