Adding boring static stuff.

--- a/Source/TreasureGuide.Web/src/app.html
+++ b/Source/TreasureGuide.Web/src/app.html
@@ -43,6 +43,10 @@
     </main>
     <footer>
         <div class="jumbo _dark footer">
+            <a route-href="route: tos">Terms of Service</a>
+            |
+            <a route-href="route: privacy">Privacy Policy</a>
+            <br />
             Developed by <a href="http://robocafaz.com" target="_blank">RoboCafaz</a>
             <br />
             <a class="button _small _info" href="https://github.com/RoboCafaz/TreasureGuide">
