Turning off my box for unit picker.

--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
@@ -56,12 +56,12 @@
                                 </label>
                             </div>
                             <div class="col m4">
-                                <label for="myBoxInput">
+                                <!--<label for="myBoxInput">
                                     <input id="myBoxInput"
                                            type="checkbox"
                                            checked.two-way="myBox" />
                                     <span class="-label-body">My Box</span>
-                                </label>
+                                </label>-->
                             </div>
                         </div>
                         <div class="row">
