--- a/Source/TreasureGuide.Web/src/custom-elements/editors/markdown-editor.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/editors/markdown-editor.html
@@ -4,11 +4,11 @@
             <textarea class="_width100" placeholder.bind="placeholder" value.bind="value"></textarea>
         </div>
         <div if.bind="!editing">
-            <markdown textcontent.bind="value" class="preview"></markdown>
+            <markdown value.bind="value" class="preview"></markdown>
         </div>
         <button class="button _xsmall _info _floatLeft" title="Toggle Preview" click.delegate="toggle()">
             <i class="fa fa-fw fa-eye"></i>
         </button>
-        <small><em><a href="https://github.com/showdownjs/showdown/wiki/Showdown%27s-Markdown-syntax" target="_blank">Markdown</a> is supported.</em></small>
+        <small><em>Markdown is supported.</em></small>
     </div>
 </template>
