Smarter query caching and stuff.

--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/stage-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/stage-picker.html
@@ -11,7 +11,7 @@
                 <div class="row">
                     <div class="col m8">
                         <label for="termInput">Term</label>
-                        <input id="termInput" type="text" value.two-way="term" placeholder="Water Seven..." />
+                        <input id="termInput" type="text" value.two-way="term & debounce" placeholder="Water Seven..." />
 
                         <label for="checkInput">
                             <input type="checkbox" checked.two-way="global" />
