--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
@@ -21,7 +21,7 @@
                                 <input id="termInput"
                                        type="text"
                                        placeholder="Unit name..."
-                                       value.two-way="term" />
+                                       value.two-way="term & debounce" />
                             </div>
                             <div class="col m4">
                                 <label for="classInput">
